--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
             <artifactId>drnglib</artifactId>
             <version>1.0.1-SNAPSHOT</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
@@ -47,26 +48,32 @@
             <artifactId>log4j</artifactId>
             <version>1.2.14</version>
         </dependency>
-
+        -->
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.9.13</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.sparkjava</groupId>
+            <artifactId>spark-core</artifactId>
+            <version>2.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
         <plugins>
-        <!-- Compile with Java 7. -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.0</version>
+                <version>3.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                    <compilerVersion>1.7</compilerVersion>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <optimize>true</optimize>
+                    <debug>true</debug>
                 </configuration>
             </plugin>
             <plugin>
